[tool.poetry]
name = "repl_python3_AI-Learning-ChatBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
pytz = "^2021.3"
SQLAlchemy = "^1.4.28"
chatterbot-corpus = "^1.2.0"
Django = "^4.0"
mathparse = "^0.1.2"
Pint = "^0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
