[tool.poetry]
name = "cloud-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.0"
scratch2py = "^0.2.5"
better-profanity = "^0.7.0"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
