[tool.poetry]
name = "capitalism-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
quart = "^0.15.0"
discord-py-slash-command = "^1.2.2"
ButtonPaginator = "^0.0.1"
discord-components = "^0.5.3"
discord-ext-ipc = "^2.0.0"
Quart-Discord = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
