[package]
name = "core"
version = "0.1.0"
edition = "2021"
[lib]
name = "core"
path = "src/lib.rs"

[dependencies.core_derive]
path = "../core_derive"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#cargo build --lib --release --target=../x86_64-unknown-none