
[package]
name = "kernel"
version = "0.1.0"
authors = ["runner"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "*"
[dependencies.compiler_builtins]
path = "../compiler_builtins"
[dependencies]
x86_64 = "0.14"
#cargo build --release --target=../x86_64-unknown-elf.json
#